tdf#133950 scale hotspot to sync with scaled cursors

keep aspect ratio as well

Change-Id: Ia3c7f84e377ebb952be0a56e9e532fb260f83459
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/104840
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>